<resources>
    <string name="app_name">BookingSystem</string>

    <string-array name="chairs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnLogout">Log Out</string>
    <string name="description">Description :</string>
    <string name="price">Price :</string>
    <string name="book">Book</string>
    <string name="mainimage">MainImage</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="image4">Image4</string>
    <string name="image5">Image5</string>
    <string name="booking">BOOK</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">TODO5</string>
    <string name="book_trip">Book Trip</string>
    <string name="surname">Surname</string>
    <string name="name1">Name</string>
    <string name="email">Email</string>
    <string name="txtdescription">Description</string>
    <string name="clear">CLEAR</string>
    <string name="seat">Seat</string>
    <string name="textview">TextView</string>
    <string name="bprice">price</string>
    <string name="descriptionb">Description</string>
    <string name="change_password">Change Password</string>
    <string name="please_fill_the_input_below_to_change_password">Please fill the input below to change password</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password1">CONFIRM PASSWORD</string>
    <string name="change">CHANGE</string>
    <string name="todo6">TODO</string>
    <string name="login1">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="username">USERNAME</string>
    <string name="password1">PASSWORD</string>
    <string name="loginUser">Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="namef">Name :</string>
    <string name="name">Name</string>
    <string name="namet">Name :</string>
    <string name="date">Date :</string>
    <string name="learn_more">Learn More</string>
    <string name="todo">TODO</string>
</resources>
