<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".Account.RegisterUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/holiday"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="35sp"
            android:background="@color/manifestColor"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_fill_the_input_below_here"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/txtusernameR"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/user_name"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_person_outline_black_24dp" />

        <EditText
            android:id="@+id/txtpasswordR"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <EditText
            android:id="@+id/txtconfirmpasswordR"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <Button
            android:id="@+id/btnRegisterUser"
            android:layout_width="251dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/loginbutton_back"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:background="@drawable/back_gradient"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>