<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/holiday"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:textSize="35sp"
            android:background="@color/manifestColor"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            tools:ignore="InvalidId"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in_to_continue"
            android:layout_marginLeft="30dp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/txtLoginUsername"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/username"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person_outline_black_24dp" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="221dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_back"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="70dp"
            android:background="@color/manifestColor"
            android:text="@string/dont_have_an_account_sign_up"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

