<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".Booking.BookingTrip">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="411dp"
        android:layout_height="141dp"
        android:src="@drawable/brezo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="365dp"
        android:layout_height="85dp"
        android:autofillHints=""
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <ImageView
        android:id="@+id/firstimage"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/brezo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:id="@+id/secondimage"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/brezo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/firstimage"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/thirdimage"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/brezo"
        app:layout_constraintBottom_toTopOf="@+id/btnBooking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstimage"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo4" />

    <ImageView
        android:id="@+id/fourthimage"
        android:layout_width="155dp"
        android:layout_height="123dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/brezo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/thirdimage"
        app:layout_constraintTop_toBottomOf="@+id/secondimage"
        android:contentDescription="@string/todo5" />

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:text="@string/booking"
        android:background="@drawable/loginbutton_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthimage" />


</androidx.constraintlayout.widget.ConstraintLayout>