<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/changepasswordfragment"
    android:background="@drawable/back_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/holiday"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:gravity="center"
            android:background="@color/manifestColor"
            android:text="@string/change_password"
            android:textColor="@color/colorBlack"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_fill_the_input_below_to_change_password"
            android:textColor="@color/colorBlack"/>


        <EditText
            android:id="@+id/txtOldPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/new_password"
            android:textColor="@color/colorBlack"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <EditText
            android:id="@+id/txtConfrimPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/confirm_password1"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

        <Button
            android:id="@+id/btnChangePasword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/loginbutton_back"
            android:text="@string/change"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <!-- Main content -->
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/back_gradient"
                app:itemIconTint="@color/colorNav"
                app:itemTextColor="@color/colorNav"
                app:menu="@menu/bottom_navigation_menu" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>