<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="336dp"
        android:layout_height="149dp"
        android:layout_marginTop="5sp"
        android:foregroundGravity="center"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/myBookingIMG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-15sp"
            android:layout_marginRight="-15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/maldivesguide1"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/mytxtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textSize="20sp"
            android:text="@string/name"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/mytxtdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110sp"
            android:text="@string/date"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>